# object-models

./: AllModels.hs  Main.hs  Model.hs  README.md  Triggers.hs  object-models.cabal
Model/: Dictionaries.hs  TH.hs
src/: AllModels.hs  Main.hs  Model.hs  Triggers.hs
src/Model/: Case.hs  Dictionaries.hs  TH.hs
